# webrtc-audio-processing

./: CMakeLists.txt  arm-aarch64.txt  build.sh
webrtc/: common_types.h
webrtc/base/: source.cmake
webrtc/common_audio/: source.cmake
webrtc/modules/audio_coding/: audio_coding.h  audiodecode.cpp  audiodecode.h  audiodecodeG711A.cpp  audiodecodeG711A.h  audiodecodeG711U.cpp  audiodecodeG711U.h  audiodecodeG722.cpp  audiodecodeG722.h  audioencode.cpp  audioencode.h  audioencodeG711A.cpp  audioencodeG711A.h  audioencodeG711U.cpp  audioencodeG711U.h  audioencodeG722.cpp  audioencodeG722.h  g711.cpp  g711.h  g711_interface.cpp  g711_interface.h  g722_decode.cpp  g722_enc_dec.h  g722_encode.cpp  g722_interface.cpp  g722_interface.h  source.cmake
webrtc/modules/audio_processing/: source.cmake
webrtc/modules/interface/: module_common_types.h
webrtc/system_wrappers/: source.cmake
