cmake_minimum_required(VERSION 2.8)

IF(WIN32)
  SET(BUILD_PROJECT_NAME "libwebrtc")
ELSEIF(UNIX)
  SET(BUILD_PROJECT_NAME "webrtc")
ENDIF()

ADD_DEFINITIONS(
  -D_GNU_SOURCE
  -DWEBRTC_POSIX
  -DWEBRTC_LINUX
  -DWEBRTC_THREAD_RR
  -DWEBRTC_NS_FIXED=1
  -DWEBRTC_AUDIO_PROCESSING_ONLY_BUILD
  -DNDEBUG
#  -mfpu=neon
#  -DWEBRTC_HAS_NEON
)

ENABLE_LANGUAGE(ASM)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE(webrtc/base/source.cmake)
INCLUDE(webrtc/common_audio/source.cmake)
INCLUDE(webrtc/modules/audio_coding/source.cmake)
INCLUDE(webrtc/modules/audio_processing/source.cmake)
INCLUDE(webrtc/system_wrappers/source.cmake)

ADD_LIBRARY(${BUILD_PROJECT_NAME} STATIC ${WEBRTC_SRC_LIST})

INSTALL(TARGETS ${BUILD_PROJECT_NAME}
  RUNTIME DESTINATION ${CMAKE_RUNTIME_INSTALL_DIRECTORY}
  LIBRARY DESTINATION ${CMAKE_LIBRARY_INSTALL_DIRECTORY}
  ARCHIVE DESTINATION ${CMAKE_ARCHIVE_INSTALL_DIRECTORY}
)
